syntax = "proto3";
option csharp_namespace = "CecoChat.Contracts.Messaging";
package CecoChat.Contracts.Messaging;
import "Messaging/MessageType.proto";
import "Messaging/DataType.proto";
import "Messaging/DeliveryStatus.proto";

service Listen {
  rpc Listen(ListenSubscription) returns (stream ListenNotification);
}

message ListenSubscription {
}

message ListenNotification {
  int64 message_id = 1;
  int64 sender_id = 2;
  int64 receiver_id = 3;
  int32 sequence_number = 4;
  MessageType type = 5;
  oneof notification_data {
    NotificationData data = 6;
    DeliveryStatus status = 7;
    NotificationReaction reaction = 8;
  }
}

message NotificationData {
  DataType type = 1;
  string data = 2;
}

message NotificationReaction {
  int64 reactor_id = 1;
  string reaction = 2;
}