syntax = "proto3";
option csharp_namespace = "CecoChat.Contracts.Backplane";
package CecoChat.Contracts.Backplane;
import "uuid.proto";
import "backplane/message-type.proto";
import "backplane/data-type.proto";
import "backplane/delivery-status.proto";

message BackplaneMessage {
  int64 message_id = 1;
  int64 sender_id = 2;
  int64 receiver_id = 3;
  Uuid client_id = 4;
  MessageType type = 5;
  oneof message_data {
    BackplaneData data = 6;
    DeliveryStatus status = 7;
    BackplaneReaction reaction = 8;
  }
}

message BackplaneData {
  DataType type = 1;
  string data = 2;
}

message BackplaneReaction {
  int64 reactor_id = 1;
  string reaction = 2;
}
